# pyhaloxml

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  cross_compile.sh  example1.py  example2.py  example3.py  meson.build  pyproject.toml  requirements.txt  setup.py
.github/: pytest.yml
.github/workflows/: black.yml  mypy.yml  publish.yml  pytest.yml  wheels.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
exampledata/: example.annotations  example_holes.annotations  multiple_holes.annotations  multiple_holes_new.geojson  qupath_test.annotations  qupath_test.geojson
examples/: example1.py  example2.py  example3.py  example4.py
haloxml/: HaloXML.py  __init__.py
pyhaloxml/: misc.py
pyhaloxml/cython/: c_inpoly.pyx  g_pointinpoly.py
pyhaloxml/numba/: n_inpoly.py
src/c/: pointinpoly.c  readme.md
src/haloxml/: HaloXML.py  ellipse.py
src/pointinpoly/: __init__.pyi  pointinpoly.c
src/pyhaloxml/: HaloXML.py  Layer.py  Region.py  __init__.py  ellipse.py  inpoly.py  misc.py  pyhaloxml_rs.pyi
src/pyhaloxml/cython/: c_inpoly.pyi  c_inpoly.pyx  g_pointinpoly.py  readme.md  setup.py
src/pyhaloxml/shapely/: __init__.py  to_shapely.py
src/pyhaloxmlc/: __init__.pyi  pyhaloxmlc.c
src/rust/: lib.rs
tests/: benchmark.py  test1.py  test2.py  test_all_types.py  test_comments.py  test_findholes.py  test_layers.py  test_layers_and_regions.py  test_points_in_polygons.py  test_types.py
tests/testdata/: SampleMask.annotations  test1.annotations  test_comments.annotations  test_findholes.annotations  test_layers.annotations  test_layers.json  test_types.annotations
tests/testdata/biganno/: .gitignore  rename.py
